# grocery-wiffle

./: .gitignore  GroceryCompare_README.md  README.md  docker-compose.yml  grocery-price-comparison-architecture.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  compare.py  lists.py
backend/app/core/: __init__.py  cache.py
backend/app/db/: database.py  seed.py
backend/app/models/: __init__.py  grocery_list.py  price.py  product.py  store.py
backend/app/schemas/: __init__.py  grocery_list.py  price.py  product.py  store.py
backend/app/services/: __init__.py  circular_parser.py  kroger_client.py  product_matcher.py
backend/tests/: conftest.py  test_product_matcher.py
mobile/: README.md  pubspec.yaml
mobile/lib/: app.dart  main.dart
mobile/lib/core/config/: api_config.dart
mobile/lib/core/constants/: app_constants.dart
mobile/lib/core/theme/: app_theme.dart
mobile/lib/core/utils/: formatters.dart
mobile/lib/data/datasources/local/: local_data_source.dart
mobile/lib/data/datasources/remote/: api_data_source.dart
mobile/lib/data/models/: comparison.dart  grocery_list.dart  product.dart  store.dart
mobile/lib/data/providers/: providers.dart
mobile/lib/data/repositories/: comparison_repository.dart  grocery_list_repository.dart
mobile/lib/features/comparison/presentation/screens/: comparison_screen.dart
mobile/lib/features/settings/: settings_screen.dart
mobile/test/: models_test.dart
(+8 files in other folders)
